<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinVerification"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/otp_pin"
            app:srcCompat="@drawable/baseline_message_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:text="@string/code"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_received"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.chaos.view.PinView
            android:id="@+id/PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:gravity="center"
            android:inputType="number"
            app:cursorColor="#A7A704"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="10dp"
            app:itemWidth="40dp"
            app:lineColor="@color/purple_200"
            android:autofillHints="password"
            android:hint="@string/_91"
            style="@style/PinWidget.PinView"/>

        <Button
            android:id="@+id/pinVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/verify"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:visibility="gone" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
