<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf4f2"
    android:orientation="vertical"
    tools:context=".ProfileUpdate">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ProPic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_user" />

    <TextView
        android:id="@+id/PicUpdateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/update_profile_picture"
        android:textColor="@color/TextColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Name"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/TextColor"
        android:textColorHint="@color/HintColor" />

    <EditText
        android:id="@+id/abt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Name"
        android:hint="@string/about_optional"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/TextColor"
        android:textColorHint="@color/HintColor" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/submit" />


</LinearLayout>