<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf4f2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/login_method"
            android:textColor="@color/TextColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PhoneLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/TextColor"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/smartphone" />

        <TextView
            android:id="@+id/EmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/TextColor"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/gmail" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/TextMsgPNG" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>