<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf4f2"
    android:padding="5dp"
    tools:context=".ChatAct">

    <LinearLayout
        android:id="@+id/linearLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_editor_absoluteX="10dp"
        app:layout_editor_absoluteY="10dp"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp">

            <ImageView
                android:id="@+id/user_picMsg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nameMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/TextColor"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/msgMoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/baseline_more_vert_24" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_Msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:padding="3dp" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/EtMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Message"
            android:hint="@string/message"
            android:inputType="text"
            android:minHeight="60dp"
            android:textColor="@color/TextColor"
            android:textColorHint="#c2bebb" />

        <ImageButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="send"
            android:padding="10dp"
            android:src="@drawable/baseline_send_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>